# anchor-kit

./: Cargo.toml  PROJECT_PROPOSAL.md  PROJECT_PROPOSAL_README.md  README.md
crates/anchor-kit-core/: Cargo.toml
crates/anchor-kit-core/src/: anchor.rs  element.rs  layout.rs  lib.rs  measure.rs  render.rs  style.rs
crates/anchor-kit-core/src/primitives/: color.rs  image.rs  mod.rs  rectangle.rs  text.rs
crates/anchor-kit-wgpu/: Cargo.toml
crates/anchor-kit-wgpu/src/: lib.rs  shader.wgsl
crates/anchor-kit-winit/: Cargo.toml
crates/anchor-kit-winit/src/: lib.rs
examples/wgpu_gui/: Cargo.toml
examples/winit-overlay/: Cargo.toml
examples/winit-overlay/src/: lib.rs  main.rs
examples/winit-simple/: Cargo.toml
examples/winit-simple/src/: lib.rs  main.rs
src/: main.rs
