[package]
name = "anchor-kit-core"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/cliff42/anchor-kit"
license = "MIT OR Apache-2.0"
keywords = ["rendering", "graphics", "immediate+mode"]
categories = ["rendering::engine"]

[dependencies]
uuid = { version = "1.19.0", features = ["v4"] }