[package]
name = "anchor-kit-wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-kit-core.workspace = true
bytemuck = { version = "1.24.0", features = ["derive"] }
glyphon = "0.9.0"
image = { version = "0.25.9", features = ["png", "jpeg"] }
wgpu = "25.0.2"
uuid = { version = "1.19.0", features = ["v4"] }
