[package]
name = "anchor-kit-wgpu"
version = "0.1.1"
edition = "2021"
description = "anchor-kit wgpu integration"
repository = "https://github.com/cliff42/anchor-kit"
license = "MIT OR Apache-2.0"
keywords = ["rendering", "graphics", "immediate+mode"]
categories = ["rendering::engine"]

[dependencies]
anchor-kit-core = "0.1.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
glyphon = "0.9.0"
image = { version = "0.25.9", features = ["png", "jpeg"] }
wgpu = "25.0.2"
uuid = { version = "1.19.0", features = ["v4"] }
